[gd_scene load_steps=2 format=3 uid="uid://bqxvj8yqxqxqx"]

[ext_resource type="Script" path="res://addons/godot_mcp/mcp_settings_dialog.gd" id="1_0"]

[node name="MCPSettingsDialog" type="AcceptDialog"]
title = "MCP Settings"
initial_position = 2
size = Vector2i(400, 300)
script = ExtResource("1_0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0

[node name="ConnectionType" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StreamableHTTPSettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
visible = true

[node name="Label" type="Label" parent="VBoxContainer/StreamableHTTPSettings"]
layout_mode = 2
text = "Streamable HTTP Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/StreamableHTTPSettings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StreamableHTTPSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StreamableHTTPSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server URL:"

[node name="StreamableHTTPURL" type="LineEdit" parent="VBoxContainer/StreamableHTTPSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://localhost:9080/mcp" 
